-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 11, 16, 17
-
Component/s: hotspot
-
b34
-
aarch64
-
linux
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8260322 | 17 | Kim Barrett | P2 | Resolved | Fixed | b07 |
| JDK-8260443 | 16.0.1 | Kim Barrett | P2 | Resolved | Fixed | b03 |
| JDK-8273944 | 15.0.5 | Olga Mikhaltcova | P2 | Resolved | Fixed | b02 |
| JDK-8273945 | 13.0.9 | Olga Mikhaltcova | P2 | Resolved | Fixed | b02 |
| JDK-8261138 | 11.0.12-oracle | Dukebot | P2 | Closed | Fixed | b01 |
| JDK-8261876 | 11.0.11 | Kim Barrett | P2 | Resolved | Fixed | b04 |
| JDK-8262790 | openjdk8u302 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8261757 | 8u301 | Fairoz Matte | P2 | Closed | Fixed | b01 |
gc/parallel/TestDynShrinkHeap.java
Here's a snippet from the log file:
#section:main
----------messages:(5/566)----------
command: main -XX:+UseAdaptiveSizePolicyWithSystemGC -XX:+UseParallelGC -XX:MinHeapFreeRatio=0 -XX:MaxHeapFreeRatio=100 -Xmx1g -verbose:gc gc.parallel.TestDynShrinkHeap
reason: User specified action: run main/othervm -XX:+UseAdaptiveSizePolicyWithSystemGC -XX:+UseParallelGC -XX:MinHeapFreeRatio=0 -XX:MaxHeapFreeRatio=100 -Xmx1g -verbose:gc gc.parallel.TestDynShrinkHeap
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules java.base,jdk.management --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
elapsed time (seconds): 12.784
----------configuration:(4/111)----------
Boot Layer
add modules: java.base jdk.management
add exports: java.base/jdk.internal.misc ALL-UNNAMED
----------System.out:(25/2299)----------
[0.006s][info][gc] Using Parallel
[1.044s][info][gc] GC(0) Pause Young (System.gc()) 15M->0M(736M) 105.819ms
[1.088s][info][gc] GC(1) Pause Full (System.gc()) 0M->0M(555M) 39.434ms
[init ] init: 805_306_368, used: 12_580_808, comm: 581_959_680, freeRatio ~= 97.8%
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/psOldGen.hpp:62
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S14883/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/8c9db681-f2a4-45e6-b9f6-722836fa649c/runs/f69d722c-e121-474e-825e-bb004c6eb968/workspace/open/src/hotspot/share/gc/parallel/psOldGen.hpp:62), pid=24366, tid=24405
# assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region [ 0x00000000c0000000, 0x00000000cf800000 ], new region [ 0x00000000cf7feff8, 0x00000000cf800ff8 ], object space [ 0x00000000c0000000, 0x00000000cf800ff8 ]
#
# JRE version: Java(TM) SE Runtime Environment (16.0+31) (fastdebug build 16-ea+31-2146)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+31-2146, mixed mode, tiered, compressed oops, parallel gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x1413244] PSOldGen::cas_allocate(unsigned long)+0xb4
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S12622/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7e5109d1-27fd-4bc6-8be9-1ac518887f66/runs/bdd8a760-54fd-47db-9798-470b06847990/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_gc_2/scratch/2/core.24366)
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S12622/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7e5109d1-27fd-4bc6-8be9-1ac518887f66/runs/bdd8a760-54fd-47db-9798-470b06847990/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_gc_2/scratch/2/hs_err_pid24366.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(0/0)----------
----------rerun:(42/8469)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000ffff78004320): GCTaskThread "GC Thread#4" [stack: 0x0000ffff477a0000,0x0000ffff479a0000] [id=24405]
Stack: [0x0000ffff477a0000,0x0000ffff479a0000], sp=0x0000ffff4799e4b0, free space=2041k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1413244] PSOldGen::cas_allocate(unsigned long)+0xb4
V [libjvm.so+0x1414be4] oop PSPromotionManager::copy_to_survivor_space<false>(oop)+0x1004
V [libjvm.so+0x1414e4c] void PSPromotionManager::copy_and_push_safe_barrier<false, narrowOop>(narrowOop*)+0xcc
V [libjvm.so+0x1412b30] PSPromotionManager::drain_stacks_depth(bool)+0x47c
V [libjvm.so+0x1419b24] steal_work(TaskTerminator&, unsigned int)+0x300
V [libjvm.so+0x141c9a4] ScavengeRootsTask::work(unsigned int)+0x314
V [libjvm.so+0x17653c8] GangWorker::run_task(WorkData)+0x98
V [libjvm.so+0x1765514] GangWorker::loop()+0x44
V [libjvm.so+0x1612cc8] Thread::call_run()+0xf8
V [libjvm.so+0x1344580] thread_native_entry(Thread*)+0x120
C [libpthread.so.0+0x7d40] start_thread+0xb4
This looks like the same failure mode as:
which was fixed in jdk-16-B30 (build ID: jdk-16+30-2130)
and this failure occurred in jdk-16+31-2146-tier1.
- backported by
-
JDK-8260322 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8260443 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8261876 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8262790 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8273944 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8273945 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Resolved
-
-
JDK-8261138 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Closed
-
-
JDK-8261757 gc/parallel/TestDynShrinkHeap.java still fails "assert(covered_region.contains(new_memregion)) failed: new region is not in covered_region"
-
- Closed
-
- relates to
-
JDK-8260046 Assert left >= right in pointer_delta() methods
-
- Resolved
-
-
JDK-8259862 MutableSpace's end should be atomic
-
- Closed
-
-
JDK-8257999 Parallel GC crash in gc/parallel/TestDynShrinkHeap.java: new region is not in covered_region
-
- Closed
-
- links to
-
Commit
openjdk/jdk13u-dev/49355efd
-
Commit
openjdk/jdk15u-dev/7ac92474
-
Commit
openjdk/jdk16/685c03dc
-
Review
openjdk/jdk13u-dev/263
-
Review
openjdk/jdk15u-dev/101
-
Review
openjdk/jdk16/127